# Shell-Textureing

./: CMakeLists.txt  vcpkg.json
shaders/: shader.frag  shader.vert
src/: application.cpp  application.h  appwindow.cpp  appwindow.h  camera.h  main.cpp  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h
